データをデータベースに格納

--- a/DSP_final.ipynb
+++ b/DSP_final.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/yanoyuutarou/Library/Python/3.9/lib/python/site-packages/urllib3/__init__.py:34: NotOpenSSLWarning: urllib3 v2.0 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
-      "  warnings.warn(\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -204,6 +196,190 @@
     "for date, precipitation in precipitation_data2:\n",
     "    print(f\"{date}: {precipitation}mm\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sqlite3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_database():\n",
+    "    # SQLiteデータベースに接続\n",
+    "    conn = sqlite3.connect('weather_data.db')\n",
+    "    cursor = conn.cursor()\n",
+    "\n",
+    "    # テーブルの作成（初回のみ）\n",
+    "    cursor.execute('''\n",
+    "        CREATE TABLE IF NOT EXISTS temperature (\n",
+    "            date TEXT PRIMARY KEY,\n",
+    "            temperature TEXT\n",
+    "        )\n",
+    "    ''')\n",
+    "\n",
+    "    cursor.execute('''\n",
+    "        CREATE TABLE IF NOT EXISTS precipitation (\n",
+    "            date TEXT PRIMARY KEY,\n",
+    "            precipitation TEXT\n",
+    "        )\n",
+    "    ''')\n",
+    "\n",
+    "    # コミットしてクローズ\n",
+    "    conn.commit()\n",
+    "    conn.close()\n",
+    "\n",
+    "def insert_data_into_database(data, table_name):\n",
+    "    # SQLiteデータベースに接続\n",
+    "    conn = sqlite3.connect('weather_data.db')\n",
+    "    cursor = conn.cursor()\n",
+    "\n",
+    "    # データの挿入\n",
+    "    cursor.executemany(f'INSERT OR IGNORE INTO {table_name} VALUES (?, ?)', data)\n",
+    "\n",
+    "    # コミットしてクローズ\n",
+    "    conn.commit()\n",
+    "    conn.close()\n",
+    "\n",
+    "# データベースの作成（初回のみ）\n",
+    "create_database()\n",
+    "\n",
+    "# 1つ目のURLからデータを取得\n",
+    "url1 = 'https://www.data.jma.go.jp/stats/etrn/view/daily_a1.php?prec_no=44&block_no=0371&year=2023&month=12&day=&view=p1'\n",
+    "temperature_data1, precipitation_data1 = scrape_weather_data(url1)\n",
+    "\n",
+    "# 2つ目のURLからデータを取得\n",
+    "url2 = 'https://www.data.jma.go.jp/stats/etrn/view/daily_a1.php?prec_no=44&block_no=0371&year=2024&month=01&day=&view=p1'\n",
+    "temperature_data2, precipitation_data2 = scrape_weather_data(url2)\n",
+    "\n",
+    "# データベースにデータを挿入\n",
+    "insert_data_into_database(temperature_data1, 'temperature')\n",
+    "insert_data_into_database(precipitation_data1, 'precipitation')\n",
+    "insert_data_into_database(temperature_data2, 'temperature')\n",
+    "insert_data_into_database(precipitation_data2, 'precipitation')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "気温データ:\n",
+      "('1', '0.0')\n",
+      "('2', '0.0')\n",
+      "('3', '0.0')\n",
+      "('4', '0.0')\n",
+      "('5', '0.0')\n",
+      "('6', '0.5')\n",
+      "('7', '0.0')\n",
+      "('8', '0.0')\n",
+      "('9', '0.0')\n",
+      "('10', '0.0')\n",
+      "('11', '0.5')\n",
+      "('12', '4.5')\n",
+      "('13', '2.0')\n",
+      "('14', '0.0')\n",
+      "('15', '0.0')\n",
+      "('16', '0.0')\n",
+      "('17', '0.0')\n",
+      "('18', '0.0')\n",
+      "('19', '0.0')\n",
+      "('20', '0.0')\n",
+      "('21', '0.0')\n",
+      "('22', '0.0')\n",
+      "('23', '0.0')\n",
+      "('24', '0.0')\n",
+      "('25', '0.0')\n",
+      "('26', '0.0')\n",
+      "('27', '0.0')\n",
+      "('28', '0.0')\n",
+      "('29', '0.0')\n",
+      "('30', '0.0')\n",
+      "('31', '1.0')\n",
+      "\n",
+      "降水量データ:\n",
+      "('1', '10.8')\n",
+      "('2', '7.2')\n",
+      "('3', '13.4 )')\n",
+      "('4', '10.8')\n",
+      "('5', '8.2')\n",
+      "('6', '9.3')\n",
+      "('7', '20.1')\n",
+      "('8', '12.3')\n",
+      "('9', '6.2 )')\n",
+      "('10', '6.7')\n",
+      "('11', '9.3')\n",
+      "('12', '10.8')\n",
+      "('13', '11.8')\n",
+      "('14', '6.7')\n",
+      "('15', '24.2 )')\n",
+      "('16', '24.2')\n",
+      "('17', '19.0 )')\n",
+      "('18', '11.8')\n",
+      "('19', '7.2')\n",
+      "('20', '7.2 )')\n",
+      "('21', '15.9 )')\n",
+      "('22', '14.4 )')\n",
+      "('23', '7.2')\n",
+      "('24', '6.2')\n",
+      "('25', '8.7')\n",
+      "('26', '11.3')\n",
+      "('27', '12.9')\n",
+      "('28', '10.8')\n",
+      "('29', '6.7')\n",
+      "('30', '7.7')\n",
+      "('31', '9.3')\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sqlite3\n",
+    "\n",
+    "def read_data_from_database(table_name):\n",
+    "    # SQLiteデータベースに接続\n",
+    "    conn = sqlite3.connect('weather_data.db')\n",
+    "    cursor = conn.cursor()\n",
+    "\n",
+    "    # データの取得\n",
+    "    cursor.execute(f'SELECT * FROM {table_name}')\n",
+    "    data = cursor.fetchall()\n",
+    "\n",
+    "    # コミットしてクローズ\n",
+    "    conn.commit()\n",
+    "    conn.close()\n",
+    "\n",
+    "    return data\n",
+    "\n",
+    "# データベースから気温データを取得して表示\n",
+    "temperature_data = read_data_from_database('temperature')\n",
+    "print(\"気温データ:\")\n",
+    "for row in temperature_data:\n",
+    "    print(row)\n",
+    "\n",
+    "# データベースから降水量データを取得して表示\n",
+    "precipitation_data = read_data_from_database('precipitation')\n",
+    "print(\"\\n降水量データ:\")\n",
+    "for row in precipitation_data:\n",
+    "    print(row)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
